# eecs397_ros

./: p8_graphs.ods  p8_report.odt
final_project/: Additions  CMakeLists.txt  package.xml  pcl_utils.cpp  pcl_utils.h
final_project/launch/: baxter_static_transforms.launch
final_project/src/: example_object_finder_action_client.cpp  example_object_grabber_action_client2.cpp  object_finder_as.cpp
p1/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
p1/launch/: minimal_sim_sin.launch
p1/src/: minimal_controller.cpp  minimal_controller.cpp~  sin_commander.cpp  sin_commander.cpp~
p2/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
p2/launch/: minimal_sim_sin.launch~  minimal_sim_with_srv.launch  minimal_sim_with_srv.launch~
p2/src/: minimal_controller.cpp  sin_commander.cpp  (+5 more)
p3/: CMakeLists.txt  README.md  package.xml
p3/action/: sinConfiguration.action
p3/launch/: minimal_sim_with_action.launch
p3/src/: minimal_controller.cpp  minimal_simulator.cpp  sin_client.cpp  sin_commander.cpp
p4/: CMakeLists.txt  minimal_robot_description.urdf  package.xml  readme.md
p4/launch/: joint_controller.launch  minimal_robot_description.launch
p4/src/: joint_controller.cpp  sin_commander.cpp
p5/: CMakeLists.txt  CMakeLists.txt~  minimal_robot_description.urdf  package.xml  readme.md  three_dof_ctl_params.yaml
p6/: CMakeLists.txt  README.md  package.xml
p7/: CMakeLists.txt  README.md  package.xml  ymca_l.jsp  ymca_r.jsp
p8/: CMakeLists.txt  README.md  package.xml  ur10_reachable_x_y
p9/: CMakeLists.txt  README.md  package.xml
(+11 files in other folders)
